css for header, banner and load more button alignment fixes

--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -11,11 +11,17 @@
   min-width: -webkit-fill-available;
   border-radius: 10px;
 }
-.banner > h5 {
+.banner__content {
   color: #ffffff;
+  padding: 10px;
+  width: fit-content;
+  display: flex;
   position: absolute;
   top: 100px;
-  left: 40vw;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 .banner__search {
   padding: 10px;
@@ -24,8 +30,12 @@
   background-color: #ffffff;
   position: absolute;
   top: 30px;
-  left: 25vw;
   border-radius: 999px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 .banner__search > input {
   border: none;
