--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,6 +6,11 @@
   top: 0;
   z-index: 100;
   width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  background-color: #ffffff;
+  box-shadow: 2px 2px rgba(0, 0, 0, 0.1);
 }
 .header > h1 {
   object-fit: contain;
@@ -16,10 +21,12 @@
   align-items: center;
   flex: 1;
   /* max-width: fit-content; */
-  padding: 10px;
+  padding: 0 10px;
   height: 30px;
   justify-content: space-around;
   max-width: 30vw;
+  margin-left: -28%;
+  margin-top: 1%;
 }
 .header__right {
   display: flex;
@@ -30,7 +37,30 @@
 .header__right__buttons {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  width: 15vw;
-  margin-right: 20px;
+  justify-content: space-evenly;
+  width: 20vw;
+  margin-right: 40px;
+}
+.header__signIn_btn {
+  background-color: #5969ff;
+  color: #ffffff;
+}
+.header__login_btn {
+  background-color: transparent;
+  color: #272343;
+}
+.header__right__buttons > button {
+  border-radius: 16px;
+  border: none;
+  outline: none;
+  height: 40px;
+  width: 108px;
+  font-size: 16px;
+  font-weight: 500;
+}
+.header__user {
+  height: 40px;
+  max-width: inherit;
+  min-width: 40px;
+  border-radius: 999px;
 }
